--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@joint/core": "^4.1.3",
     "vue": "^3.5.13"
   },
   "devDependencies": {
