--- a/.github/workflows/deploy-docker-image-on-release.yml
+++ b/.github/workflows/deploy-docker-image-on-release.yml
@@ -15,8 +15,8 @@ env:
   IMAGE_NAME: ${{ github.repository }}
 
 jobs:
-  test:
-    uses: ./.github/workflows/test.yml
+  #test:
+  #  uses: ./.github/workflows/test.yml
 
   build-and-push-image:
     runs-on: ubuntu-latest
