--- a/.github/workflows/deploy-docker-image-on-release.yml
+++ b/.github/workflows/deploy-docker-image-on-release.yml
@@ -20,7 +20,7 @@ jobs:
 
   build-and-push-image:
     runs-on: ubuntu-latest
-    needs: [test]
+    #needs: [test]
     permissions:
       contents: read
       packages: write
