--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@joint/core": "^4.1.3",
+    "bootstrap": "^5.3.5",
+    "bootstrap-vue-3": "^0.5.1",
     "vue": "^3.5.13"
   },
   "devDependencies": {
