--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@joint/core": "^4.1.3",
+    "axios": "^1.9.0",
     "bootstrap": "^5.3.5",
     "bootstrap-vue-3": "^0.5.1",
     "vue": "^3.5.13"
