--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc -b && vite build",
+    "build": " vite build",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -13,7 +13,8 @@
     "axios": "^1.9.0",
     "bootstrap": "^5.3.5",
     "bootstrap-vue-3": "^0.5.1",
-    "vue": "^3.5.13"
+    "vue": "^3.5.13",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
